--- a/_posts/2015-05-05-siam-gls-2015.md
+++ b/_posts/2015-05-05-siam-gls-2015.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Annual Conference of Great Lakes Section of SIAM"
+title:  "Annual Conference of the Great Lakes Section of SIAM"
 date:   2015-05-05 22:41:19
 categories: conferences
 tags: ["conferences", "math"]
