--- a/_posts/2017-04-04-cramers-v.md
+++ b/_posts/2017-04-04-cramers-v.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Cramer's V vs FST for Insect Population Genetics"
+title: "Cramer's V vs F<sub>ST</sub> for Insect Population Genetics"
 date: 2017-04-04 00:01:19
 categories: "bioinformatics"
 tags: ["statistics"]
